<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>eu.europeana.entity</groupId>
	<artifactId>entity-api</artifactId>
	<version>2.1.5-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Entity API - Version 2</name>

	<repositories>
		<repository>
			<id>libs-release</id>
			<name>europeana-releases</name>
			<url>https://artifactory.eanadev.org/artifactory/libs-release/</url>
		</repository>
		<repository>
			<id>libs-snapshots</id>
			<name>europeana-snapshots</name>
			<url>https://artifactory.eanadev.org/artifactory/libs-snapshot/</url>
		</repository>

		<!-- repo for plugins, required to resolve git-commit-id -->
		<repository>
			<id>plugins-release</id>
			<name>artifactory plugins-release</name>
			<url>https://artifactory.eanadev.org/artifactory/plugins-release</url>
		</repository>

	</repositories>


	<modules>
		<module>entity-definitions</module>
		<module>entity-common</module>
		<module>entity-utils</module>
		<module>entity-solr</module>
		<module>entity-web</module>
		<module>entity-stats</module>

	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot (because we
				don't 
					use Spring-Boot as parent pom) -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${version.springBoot}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>
		<version.maven-compiler-plugin>3.10.1</version.maven-compiler-plugin>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<!-- SG: NOTE: for newer maven compiler plugin only release version
		should be required -->
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		
		<!-- property to be used for add opens jvm arguments in plugins -->
		<java.17.addopens>--add-opens java.base/java.util=ALL-UNNAMED
			--add-opens java.base/java.lang=ALL-UNNAMED
		</java.17.addopens>
		
		<sonar.organization>europeana</sonar.organization>
		<version.junit>5.7.0</version.junit>
		<version.commonsApi>0.4.2-SNAPSHOT</version.commonsApi>
		
		<version.corelib>2.15.4</version.corelib>
		<version.annotationLd>1.1.9</version.annotationLd>

		<version.jackson>2.11.4</version.jackson>
		<version.commonsLang3>3.0</version.commonsLang3>
		<version.commonsText>1.9</version.commonsText>
		<version.swagger>3.0.0</version.swagger>
		<version.morphia>2.1.4</version.morphia>
		<version.servletApi>2.5</version.servletApi>
		<version.springBoot>2.5.14</version.springBoot>
		<!--
		<version.spring>5.3.9</version.spring>
		-->
		<version.jaxb>2.3.1</version.jaxb>
		<version.apacheSolr>7.7.2</version.apacheSolr>
		<version.servletJstl>1.2</version.servletJstl>
		<version.log4j2>2.17.2</version.log4j2>
		<version.javax.annotation>1.3.2</version.javax.annotation>
		
		<version.maven-surfire-plugin>3.0.0-M7</version.maven-surfire-plugin>
		
	</properties>

	<build>
		<!-- set fixed name for easy deployment -->
		<finalName>${project.artifactId}-${project.version}</finalName>

		<!-- configure source and output locations -->
		<directory>target</directory>
		<outputDirectory>target/classes</outputDirectory>
		<testOutputDirectory>target/test-classes</testOutputDirectory>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<!--
		<testSourceDirectory>src/integration-test/java</testSourceDirectory> -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>

		<pluginManagement>
			<plugins>
				<plugin>
					<inherited>true</inherited>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${version.springBoot}</version>  
					<configuration>
						<jvmArguments>${java.17.addopens}</jvmArguments>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${version.maven-surfire-plugin}</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
